Vytvoreno loadovani a prvni presentery a modely s databazi

--- a/myShark/config.neon
+++ b/myShark/config.neon
@@ -21,5 +21,14 @@ common:
 production < common:
 
 development < common:
+	database:
+		driver:	mysql
+		host:	localhost
+		database:	myshark
+		username:	root
+		password:	misak
+		profiler:	true
+
+	debugMode:  true
 
 console < common:
