--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,6 @@
+auxiliary.org-netbeans-modules-php-phpdoc.target=C:\\Users\\misak113\\programing\\internet\\apache2.2\\avantcore\\myShark\\docs
 copy.src.files=false
 copy.src.target=
-index.file=www/index.php
+index.file=index.php
 run.as=LOCAL
-url=http://localhost/avantcore/myShark/
+url=http://localhost.myShark.cz/
