--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,8 +1,16 @@
 auxiliary.org-netbeans-modules-html-editor-lib.default-html-public-id=HTML5
-include.path=${php.global.include.path}
+ignore.path=
+include.path=\
+    ${php.global.include.path}
 php.version=PHP_53
+phpunit.bootstrap=www/index.php
+phpunit.bootstrap.create.tests=true
+phpunit.configuration=
+phpunit.run.test.files=false
+phpunit.suite=
 source.encoding=UTF-8
 src.dir=.
 tags.asp=false
 tags.short=true
-web.root=.
+test.src.dir=tests
+web.root=www
