--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 
-####### Redirect na sloûku www ######
+####### Redirect na slo≈æku www ######
 RewriteEngine on
 RewriteRule (.*) http://%{HTTP_HOST}/www/$1 [QSA,L]
