--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ copy.src.files=false
 copy.src.target=
 index.file=index.php
 run.as=LOCAL
-url=http://localhost.myShark.cz/
+url=http://localhost.myshark.cz/
