--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,14 +3,15 @@ ignore.path=
 include.path=\
     ${php.global.include.path}
 php.version=PHP_53
-phpunit.bootstrap=www/index.php
+phpunit.bootstrap=
 phpunit.bootstrap.create.tests=true
 phpunit.configuration=
 phpunit.run.test.files=false
 phpunit.suite=
+phpunit.test.groups.ask=false
 source.encoding=UTF-8
 src.dir=.
 tags.asp=false
-tags.short=true
+tags.short=false
 test.src.dir=tests
 web.root=www
